[tool.poetry]
name = "dl-course-hse-masters"
version = "0.1.0"
description = ""
authors = ["KuBaN658 <garkovski_dmitri@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
numpy = "^2.2.4"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
